--- a/src/main/resources/view/simpleMain.fxml
+++ b/src/main/resources/view/simpleMain.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="210.0" prefHeight="550.0" prefWidth="210.0" styleClass="fundo" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.simplesw.mvnsimple.controller.SimpleMainController">
+<AnchorPane focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="210.0" prefHeight="550.0" prefWidth="210.0" styleClass="fundo" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.simplesw.mvnsimple.controller.SimpleMainController">
   <children>
       <VBox alignment="CENTER" layoutX="-18.0" layoutY="-18.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -106,4 +106,4 @@
          </children>
       </VBox>
   </children>
-</fx:root>
+</AnchorPane>
