--- a/src/main/resources/view/Pacientes.fxml
+++ b/src/main/resources/view/Pacientes.fxml
@@ -22,7 +22,7 @@
 <?import jidefx.scene.control.field.DateField?>
 <?import jidefx.scene.control.field.FormattedTextField?>
 
-<AnchorPane prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.br.ralfh.medico.PacienteController">
+<AnchorPane prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.simplesw.mvnsimple.controller.PacienteController">
 <children>
 <VBox AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="2.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 <children>
@@ -436,7 +436,7 @@
                                                       <VBox fillWidth="false" prefHeight="50.0" spacing="4.0">
                                                          <children>
                                                             <Label text="Status" />
-                                                            <ComboBox fx:id="status" editable="true" prefWidth="130.0" />
+                                                            <ChoiceBox fx:id="status" prefWidth="130.0" />
                                                          </children>
                                                       </VBox>
                                                    </children>
